--- a/Design1/app/src/main/res/values/strings.xml
+++ b/Design1/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Design1</string>
-    <string name="book">Book</string>
+    <string name="order">Order</string>
     <string name="go">Go</string>
     <string name="label_size">Size</string>
     <string name="label_color">Colour</string>
@@ -16,4 +16,6 @@
     <string name="time_option1">PM\n1&#8211;2</string>
     <string name="time_option2">PM\n2&#8211;3</string>
     <string name="time_option3">PM\n3&#8211;4</string>
+
+    <string name="thank_you">Thank you! you\'ll receive\nyour order soon!</string>
 </resources>
